<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Easy DecBinHexOct Converter</string>
    <string name="action_settings">Settings</string>
    <string name="text_dec">Decimal</string>
    <string name="text_bin">Binary</string>
    <string name="text_hex">Hexadecimal</string>
    <string name="text_oct">Octal</string>
    
    <string-array name="strings_spinner">
        <item>@string/text_dec</item>
        <item>@string/text_bin</item>
        <item>@string/text_hex</item>
        <item>@string/text_oct</item>
    </string-array>
    
    <!-- Buttons -->
    <string name="text_zero">0</string>
    <string name="text_one">1</string>
    <string name="text_two">2</string>
    <string name="text_three">3</string>
    <string name="text_four">4</string>
    <string name="text_five">5</string>
    <string name="text_six">6</string>
    <string name="text_seven">7</string>
    <string name="text_eight">8</string>
    <string name="text_nine">9</string>
    <string name="text_hex_a">A</string>
    <string name="text_hex_b">B</string>
    <string name="text_hex_c">C</string>
    <string name="text_hex_d">D</string>
    <string name="text_hex_e">E</string>
    <string name="text_hex_f">F</string>
    <string name="text_clear">CLEAR</string>
    <string name="text_del">DEL</string>

</resources>
